# docs/swagger.json
@@ -19,29 +19,281 @@
     "host": "localhost:18005",
     "basePath": "/",
     "paths": {
-        "/blog_server/publish/action/create": {
+        "/blog_server/publish/action": {
             "post": {
-                "responses": {}
-            }
-        },
-        "/blog_server/publish/action/delete": {
-            "post": {
-                "responses": {}
-            }
-        },
-        "/blog_server/publish/action/modify": {
-            "post": {
-                "responses": {}
+                "description": "用户可以通过此接口发表一篇文章",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章管理"
+                ],
+                "summary": "发表文章",
+                "parameters": [
+                    {
+                        "description": "文章创建请求参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleCreateActionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功响应",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "用户可以通过此接口删除一篇文章",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章管理"
+                ],
+                "summary": "删除文章",
+                "parameters": [
+                    {
+                        "description": "文章删除请求参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleBaseActionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功响应",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    }
+                }
+            },
+            "patch": {
+                "description": "用户可以通过此接口修改一篇文章",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章管理"
+                ],
+                "summary": "修改文章",
+                "parameters": [
+                    {
+                        "description": "文章修改请求参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleModifyActionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功响应",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    }
+                }
             }
         },
         "/blog_server/publish/detail": {
             "get": {
-                "responses": {}
+                "description": "用户可以通过此接口获取某篇文章的详细信息",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章管理"
+                ],
+                "summary": "获取文章详情",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "文章的hashid",
+                        "name": "aHashID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "作者id",
+                        "name": "uid",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功响应，返回文章详情",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    }
+                }
             }
         },
         "/blog_server/publish/list": {
             "get": {
-                "responses": {}
+                "description": "用户可以通过此接口获取文章列表",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章管理"
+                ],
+                "summary": "获取文章列表",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "offset",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "如果id为0，则根据时间的先后去请求文章列表",
+                        "name": "user_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功响应，返回文章列表",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleCardsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/blog_server/publish/view_add": {
+            "post": {
+                "description": "用户可以通过此接口增加某篇文章的阅读数",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文章管理"
+                ],
+                "summary": "增加文章阅读数",
+                "parameters": [
+                    {
+                        "description": "文章阅读数增加请求参数",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleBaseActionRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功响应",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/publish.ArticleActionResponse"
+                        }
+                    }
+                }
             }
         },
         "/blog_server/user/": {
@@ -260,7 +512,7 @@
                     {
                         "type": "string",
                         "description": "上传的类型，是头像还是背景图片",
-                        "name": "image_type",
+                        "name": "file_type",
                         "in": "formData",
                         "required": true
                     }
@@ -283,6 +535,105 @@
         }
     },
     "definitions": {
+        "common.Article": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "description": "author information",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/common.User"
+                        }
+                    ]
+                },
+                "base": {
+                    "$ref": "#/definitions/common.ArticleBase"
+                },
+                "hashId": {
+                    "type": "string"
+                },
+                "id": {
+                    "description": "video id",
+                    "type": "integer"
+                },
+                "info": {
+                    "$ref": "#/definitions/common.ArticleInfo"
+                }
+            }
+        },
+        "common.ArticleBase": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "preload": {
+                    "$ref": "#/definitions/common.ArticleBasePreload"
+                }
+            }
+        },
+        "common.ArticleBasePreload": {
+            "type": "object",
+            "properties": {
+                "cover_url": {
+                    "type": "string"
+                },
+                "note": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "common.ArticleCard": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "description": "author information",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/common.UserBase"
+                        }
+                    ]
+                },
+                "hashId": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "info": {
+                    "$ref": "#/definitions/common.ArticleInfo"
+                },
+                "pre": {
+                    "$ref": "#/definitions/common.ArticleBasePreload"
+                }
+            }
+        },
+        "common.ArticleInfo": {
+            "type": "object",
+            "properties": {
+                "comment_count": {
+                    "description": "total number of comments on the video",
+                    "type": "integer"
+                },
+                "dislike_count": {
+                    "type": "integer"
+                },
+                "is_favorite": {
+                    "description": "true-Liked，false-did not like",
+                    "type": "boolean"
+                },
+                "like_count": {
+                    "description": "total number of likes for the video",
+                    "type": "integer"
+                },
+                "viewed_count": {
+                    "type": "integer"
+                }
+            }
+        },
         "common.BaseResponse": {
             "type": "object",
             "properties": {
@@ -316,6 +667,9 @@
         "common.User": {
             "type": "object",
             "properties": {
+                "base": {
+                    "$ref": "#/definitions/common.UserBase"
+                },
                 "follow_count": {
                     "description": "total number of people the user follows",
                     "type": "integer"
@@ -324,20 +678,9 @@
                     "description": "total number of fans",
                     "type": "integer"
                 },
-                "id": {
-                    "description": "user id",
-                    "type": "integer"
-                },
                 "is_follow": {
                     "description": "whether the currently logged-in user follows this user",
                     "type": "boolean"
-                },
-                "name": {
-                    "description": "user name",
-                    "type": "string"
-                },
-                "profile": {
-                    "$ref": "#/definitions/common.UserProfile"
                 },
                 "total_favorited": {
                     "description": "number of articles for articles published by user",
@@ -346,6 +689,22 @@
                 "work_count": {
                     "description": "number of articles published by user",
                     "type": "integer"
+                }
+            }
+        },
+        "common.UserBase": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "description": "user id",
+                    "type": "integer"
+                },
+                "name": {
+                    "description": "user name",
+                    "type": "string"
+                },
+                "profile": {
+                    "$ref": "#/definitions/common.UserProfile"
                 }
             }
         },
@@ -362,6 +721,83 @@
                 },
                 "signature": {
                     "description": "user profile",
+                    "type": "string"
+                }
+            }
+        },
+        "publish.ArticleActionResponse": {
+            "type": "object",
+            "properties": {
+                "status_code": {
+                    "type": "integer"
+                },
+                "status_msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "publish.ArticleBaseActionRequest": {
+            "type": "object",
+            "properties": {
+                "aHashID": {
+                    "description": "文章的hashid",
+                    "type": "string"
+                },
+                "uid": {
+                    "description": "作者id",
+                    "type": "integer"
+                }
+            }
+        },
+        "publish.ArticleCardsResponse": {
+            "type": "object",
+            "properties": {
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/common.ArticleCard"
+                    }
+                },
+                "status_code": {
+                    "type": "integer"
+                },
+                "status_msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "publish.ArticleCreateActionRequest": {
+            "type": "object",
+            "properties": {
+                "payload": {
+                    "$ref": "#/definitions/common.ArticleBase"
+                },
+                "uid": {
+                    "type": "integer"
+                }
+            }
+        },
+        "publish.ArticleModifyActionRequest": {
+            "type": "object",
+            "properties": {
+                "base": {
+                    "$ref": "#/definitions/publish.ArticleBaseActionRequest"
+                },
+                "payload": {
+                    "$ref": "#/definitions/common.ArticleBase"
+                }
+            }
+        },
+        "publish.ArticleResponse": {
+            "type": "object",
+            "properties": {
+                "article": {
+                    "$ref": "#/definitions/common.Article"
+                },
+                "status_code": {
+                    "type": "integer"
+                },
+                "status_msg": {
                     "type": "string"
                 }
             }
